2006-10-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-hsv.c: Changing the way the
	dimmed elements of the dialog are being drawn -- fixes NB#41498. 
	Cache the pre-generated dimmed pixbuf to improve the performance. We could
	cache the actual hsv plane too in a similiar way.  

2006-10-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-hsv.c: Adding the border
	around the color selector. Fixes #NB42007. 

2006-10-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-font-selection-dialog.c: Forcing the dialog to
	be more wide. A slightly ugly fix, but fixes NB#41501. Will be fixed
	properly once we solve all the label truncating/wrapping/ellipsizing
	issues. 

2006-10-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c: Remove the focus grab after
	dialog execution. Fixes NB#42555.

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c:
	(hildon_date_editor_entry_validate): Set the stored date value 
	when it's validated with some entry empty. Fixes NB#42504.

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
	
	[0.14.5-1 release]
	
	* configure.ac:
	* debian/changelog: Update.

	* debian/hildon-libs-dev.install: Removing redundant .la/.a files. 

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/copyright: One more license fix. 

2006-10-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c:
	* hildon-widgets-plugins/hildon-color-chooser-hsv.c:
	* hildon-widgets/gtk-infoprint.c:
	* hildon-widgets/gtk-infoprint.h:
	* hildon-widgets/hildon-add-home-dialog.c:
	* hildon-widgets/hildon-add-home-dialog.h:
	* hildon-widgets/hildon-app-private.h:
	* hildon-widgets/hildon-app.c: